<resources>
    <string name="OK">OK</string>
    <string name="PRICE_per_month">%s/month</string>
    <string name="PRICE_per_year">%s/year</string>
    <string name="_1_column">1 column</string>
    <string name="_2_columns">2 columns</string>
    <string name="_3_columns">3 columns</string>
    <string name="_3_days_free">3 days free</string>
    <string name="_4_columns">4 columns</string>
    <string name="_5_columns">5 columns</string>
    <string name="_7_days_free">7 days free</string>
    <string name="a_new_update_is_available">A new update is available</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_credits_other">Other</string>
    <string name="about_credits_translations">Translations</string>
    <string name="about_main_info">Copyright Jakob Harteg, 2021.</string>
    <string name="about_main_more_title">More by the same developer</string>
    <string name="about_main_rate">Rate this app</string>
    <string name="about_main_share">Share this app</string>
    <string name="accessibility_description_string">CrookCatcher uses the accessibility permission for certain safety features that users can turn on if desired. They include turning off the screen when the power menu, notification shade or quick settings are shown on the lockscreen. The purpose of this is to prevent thieves from turning off the device or switching on airplane mode.</string>
    <string name="accessibility_dialog_info_content_1">The accessibility permission is needed to detect when the power menu, notification shade or quick tiles are shown on the screen.</string>
    <string name="accessibility_dialog_info_content_2">"CrookCatcher does not collect any personal or sensitive data, nor does it track your activity outside of the app. Anonymous usage statistics about the the experimental features are collected to improve their stability and performance. This can be turned off by disabling the 'Improve CrookCatcher' setting on the main settings screen."</string>
    <string name="accessibility_dialog_info_header_1">Why is the permission needed?</string>
    <string name="accessibility_dialog_info_header_2">Data collection</string>
    <string name="accessibility_permission_message_1">To enable this feature, CrookCatcher requires the accessibility permission.</string>
    <string name="action_close">Close</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="billing_not_supported">Billing not supported</string>
    <string name="billing_not_supported_btn">Unlock Pro Features for Free</string>
    <string name="billing_not_supported_message">"CrookCatcher Pro is ordinarily a paid subscription, but it looks like Google doesn't support payments from your country, sadly. I'd hate for you to miss out on using CrookCatcher Pro, so as long as Google Payments aren't available in your country, I'm happy to offer you access to all Pro features for free (except for removing ads). Click the button below to unlock them!"</string>
    <string name="config_change_email_subject_dialog">Change the email subject to prevent intruders from seeing revealing email notifications.</string>
    <string name="config_change_email_subject_title">Custom email subject text</string>
    <string name="config_email_info">A stable internet connection is needed to send emails. If your device is offline when pictures/videos are captured, emails will be sent automatically when you reconnect.</string>
    <string name="config_email_receiver_title">Send emails to</string>
    <string name="config_recording_info">Record a sound clip. If email is enabled, sound clips will be emailed to you.</string>
    <string name="config_recording_length">Recording length</string>
    <string name="config_send_test_email_title">Send test email</string>
    <string name="config_videos_info">Videos are recorded using the front facing camera and will start after pictures have been taken. If email is enabled, videos will be emailed to you.</string>
    <string name="delay_start_by">Delay start by</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="free">Free</string>
    <string name="full_feature_breakdown">All CrookCatcher Pro features</string>
    <string name="got_questions">Got questions?</string>
    <string name="max_file_size">Maximum file size</string>
    <string name="no_internet_offers_message">To see available offers, please connect to the internet and restart the app.</string>
    <string name="paywall_hero_bullet1">Capture more evidence with <font color="#64DD91"><b>rear-view camera</b></font> and <font color="#64DD91"><b>video recordings</b></font>.</string>
    <string name="paywall_hero_bullet2">Trick thieves with a <font color="#64DD91"><b>fake home screen</b></font>.</string>
    <string name="paywall_hero_bullet3">Break-in detection, <font color="#64DD91"><b>theft alarm</b></font>, google drive upload, no ads and much more!</string>
    <string name="paywall_hero_copy_theft">Catch thieves in the act</string>
    <string name="paywall_hero_subtext">with CrookCatcher Pro</string>
    <string name="pro_faq_cancel_how_A">Cancelling your subscription is easy. Go to the settings page in CrookCatcher, scroll down and select Manage Subscription. Then click Cancel Subscription. You can also go to the subscriptions overview in the Google Play app directly. If you cancel your subscription before your free trial ends, you will not be charged anything.</string>
    <string name="pro_faq_cancel_how_Q">How to cancel?</string>
    <string name="pro_faq_ios_A">No, CrookCatcher does not support iOS, since iOS does not allow apps to detect wrong unlock attempts.</string>
    <string name="pro_faq_ios_Q">Can I get CrookCatcher on iOS?</string>
    <string name="pro_faq_multiple_A">Yes, if you purchase CrookCatcher Pro on one device, it will also be available on any other device that is signed into Google Play with the same Google account.</string>
    <string name="pro_faq_multiple_Q">Can I have CrookCatcher Pro on multiple devices?</string>
    <string name="pro_faq_reboot_A">After rebooting Android prevents non-system apps from starting until the phone has been unlocked. This means that CrookCatcher will not work if the phone has been rebooted and not unlocked. This is bad and unfortunately not something we can fix.</string>
    <string name="pro_faq_reboot_Q">Does CrookCatcher work after rebooting?</string>
    <string name="pro_faq_refund_A">You are eligible for a full refund within 30 days of your purchase. To request a refund, please send an email to contact@crookcatcher.app with your order number or the Google account used for the purchase. You can also find this email address in the Help section of CrookCatcher after your purchase. If more than 30 days have passed, a refund may still be granted in cases where technical issues prevent the app from functioning properly.</string>
    <string name="pro_faq_refund_Q">Can I get a refund?</string>
    <string name="pro_faq_why_sub_A">CrookCatcher Pro is a subscription to ensure I have the resources to continue developing, maintaining, and updating the app. As the sole developer, your support directly helps me keep the app running smoothly with the latest Android features and security updates.</string>
    <string name="pro_faq_why_sub_Q">Why is CrookCatcher Pro a subscription?</string>
    <string name="recurring_payment_cancel_anytime">Recurring payment, cancel anytime.</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="review_10_author_date">Nehemiah N. Aluwong • 2 Nov 2024</string>
    <string name="review_10_text">"It's one of the best Apps I have ever used"</string>
    <string name="review_11_author_date">Edmond PAGUEU • 23 Sept 2024</string>
    <string name="review_11_text">"It's really very good. My children fell into my trap. It was really very funny; their face, they want revenge 😂😂😂"</string>
    <string name="review_1_author_date">Mohamed Ahsan • 7 Sept 2024</string>
    <string name="review_1_text">I am impressed by this app! So bought the premium features. Worth the price they are asking for. Well done team! Keep improving the app!</string>
    <string name="review_2_author_date">Pankaj Kadulkar • 26 Nov 2023</string>
    <string name="review_2_text">"Today I paid for pro and it didn't disappoint me, fully satisfied!"</string>
    <string name="review_3_author_date">Muhammad Bilal • Feb 21, 2021</string>
    <string name="review_3_text">Truly love this application, yesterday my handset was stolen but I had the picture of the thief so by the help of some friends I recognised the thief and today I have my phone. 🥰🥰🥰</string>
    <string name="review_4_author_date">Suraj kumar Majhi • 9 Feb 2022</string>
    <string name="review_4_text">Really awesome. I found my lost phone with this app. Thanks creator</string>
    <string name="review_5_author_date">Carlos Martins • 23 May 2024</string>
    <string name="review_5_text">"Top functioning! I've already caught several intruders, including my wife snooping. And she tried to deny it…"</string>
    <string name="review_6_author_date">Robinson Elerubo • 29 Sept 2024</string>
    <string name="review_6_text">This is one of the best apps to catch anyone trying to steal your phone or the information in your phone without your authorization.</string>
    <string name="review_7_author_date">Google Play user • 1 Nov 2024</string>
    <string name="review_7_text">Quite useful, my phone got actually robbed and I found where it was</string>
    <string name="secure_with_google_play">Secure with Google Play</string>
    <string name="summary_not_set">Not set</string>
    <string name="tap_a_feature_to_learn_more">"Tap a feature
to learn more"</string>
    <string name="video_length">Video length</string>
    <string name="video_quality">Video quality</string>
</resources>