<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/md_theme_dark_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/scroll_view" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
                <com.google.android.material.card.MaterialCardView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" app:cardBackgroundColor="?colorSurfaceBright" app:cardCornerRadius="100.0dip" app:strokeWidth="0.0dip">
                    <TextView android:textSize="28.0sp" android:textStyle="bold" android:gravity="center_vertical" android:padding="22.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="🚀" />
                </com.google.android.material.card.MaterialCardView>
                <Space android:layout_width="fill_parent" android:layout_height="16.0dip" />
                <TextView android:textStyle="bold" android:gravity="center" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/paywall_hero_copy_theft" android:lines="1" android:fontFamily="@font/nexa_bold" app:autoSizeMaxTextSize="84.0sp" app:autoSizeMinTextSize="16.0sp" app:autoSizeTextType="uniform" />
                <TextView android:textStyle="bold" android:gravity="center" android:id="@id/tv_pro_title1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-8.0dip" android:layout_marginBottom="32.0dip" android:text="@string/paywall_hero_subtext" android:lines="2" android:lineSpacingExtra="15.0dip" android:fontFamily="@font/nexa_bold" app:autoSizeMaxTextSize="20.0sp" app:autoSizeMinTextSize="14.0sp" app:autoSizeTextType="uniform" />
                <TextView android:textSize="18.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paywall_hero_bullet1" style="@style/BulletItem" />
                <TextView android:textSize="18.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paywall_hero_bullet2" style="@style/BulletItem" />
                <TextView android:textSize="18.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paywall_hero_bullet3" style="@style/BulletItem" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/pro_offers_top" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:id="@id/pro_offer_holder_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/divider_8dp_transparent" android:showDividers="middle">
                    <com.harteg.crookcatcher.ui.PeriodCardView android:id="@id/pro_offers_toprow_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                    <com.harteg.crookcatcher.ui.PeriodCardView android:id="@id/pro_offers_toprow_2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                </LinearLayout>
                <com.google.android.material.card.MaterialCardView android:id="@id/pro_offers_error_card_top" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" app:cardBackgroundColor="?colorSurfaceContainerHighest" style="?materialCardViewElevatedStyle">
                    <TextView android:textSize="18.0sp" android:textColor="?colorOnSurface" android:gravity="center" android:id="@id/pro_offers_error_card_top_textview" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_internet_offers_message" />
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.button.MaterialButton android:textColor="?colorOnBackground" android:layout_gravity="center_horizontal" android:id="@id/btnCancelAnytimeTop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="10000.0dip" android:text="@string/recurring_payment_cancel_anytime" style="@style/Widget.Material3.Button.TextButton" />
                <com.harteg.crookcatcher.ui.PeriodCardView android:id="@id/pro_offers_top_fullrow" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <com.google.android.material.button.MaterialButton android:textColor="?colorOnBackground" android:layout_gravity="center_horizontal" android:id="@id/btnSecureWIthGooglePlayTop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/secure_with_google_play" app:drawableEndCompat="@drawable/verified_user_18px" style="@style/Widget.Material3.Button.TextButton" />
                <com.google.android.material.button.MaterialButton android:textColor="?colorOnBackground" android:layout_gravity="center_horizontal" android:id="@id/btnGotQuestionsTop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/got_questions" style="@style/Widget.Material3.Button.TextButton.Dialog" />
            </LinearLayout>
            <com.google.android.material.card.MaterialCardView android:id="@id/pro_offers_billing_unsupported_card" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:backgroundTint="?colorSurface" app:cardBackgroundColor="?colorSurfaceContainerHighest" app:strokeColor="?colorPrimary" app:strokeWidth="2.0dip" style="?materialCardViewElevatedStyle">
                <LinearLayout android:orientation="vertical" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="?colorOnSurface" android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/billing_not_supported" />
                    <TextView android:textSize="16.0sp" android:textColor="?colorOnSurface" android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/billing_not_supported_message" />
                    <com.google.android.material.button.MaterialButton android:id="@id/pro_offers_billing_unsupported_card_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/billing_not_supported_btn" style="@style/Widget.Material3.Button" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
                <com.harteg.crookcatcher.ui.ReviewCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" app:authorText="@string/review_1_author_date" app:reviewText="@string/review_1_text" />
                <com.harteg.crookcatcher.ui.ReviewCardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" app:authorText="@string/review_2_author_date" app:reviewText="@string/review_2_text" />
                <com.harteg.crookcatcher.ui.ReviewCardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:authorText="@string/review_3_author_date" app:reviewText="@string/review_3_text" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:paddingTop="32.0dip" android:paddingBottom="32.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
                <TextView android:textAppearance="?textAppearanceHeadlineSmall" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="start" android:id="@id/tv_pro_all_pro_features" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/full_feature_breakdown" android:fontFamily="@font/nexa_bold" />
                <TextView android:textAppearance="?textAppearanceLabelLarge" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tap_a_feature_to_learn_more" android:singleLine="true" />
                <RelativeLayout android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="vertical" android:id="@id/pro_features_holder" android:background="@drawable/frame_rounded_top_left_bottom_8dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="64.0dip" android:divider="@drawable/divider_dark" android:showDividers="middle" android:elevation="15.0dip" />
                    <com.google.android.material.card.MaterialCardView android:id="@id/pro_column_pro" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentEnd="true" android:elevation="8.0dip" app:cardBackgroundColor="?colorSurface" app:cardCornerRadius="8.0dip" style="?materialCardViewElevatedStyle">
                        <View android:background="@drawable/rounded_corners_32dp" android:layout_width="64.0dip" android:layout_height="5.0dip" android:layout_margin="8.0dip" />
                        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="PRO" android:fontFamily="@font/nexa_bold" />
                        <android.widget.Space android:id="@id/pro_column_pro_space" android:layout_width="fill_parent" android:layout_height="240.0dip" android:layout_marginTop="64.0dip" />
                    </com.google.android.material.card.MaterialCardView>
                    <FrameLayout android:background="@drawable/frame_rounded_top_left_8dp" android:layout_width="72.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_toStartOf="@id/pro_column_pro">
                        <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/free" />
                        <android.widget.Space android:id="@id/pro_column_free_space" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="48.0dip" />
                    </FrameLayout>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/pro_offers_bottom" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
                <LinearLayout android:orientation="horizontal" android:id="@id/pro_offer_holder_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/divider_8dp_transparent" android:showDividers="middle">
                    <com.harteg.crookcatcher.ui.PeriodCardView android:id="@id/pro_offers_bottomrow_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                    <com.harteg.crookcatcher.ui.PeriodCardView android:id="@id/pro_offers_bottomrow_2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                </LinearLayout>
                <com.google.android.material.card.MaterialCardView android:id="@id/pro_offers_error_card_bottom" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" app:cardBackgroundColor="?colorSurfaceContainerHighest" style="?materialCardViewElevatedStyle">
                    <TextView android:textSize="18.0sp" android:textColor="?colorOnSurface" android:gravity="center" android:id="@id/pro_offers_error_card_bottom_textview" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_internet_offers_message" />
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.button.MaterialButton android:textColor="?colorOnBackground" android:layout_gravity="center_horizontal" android:id="@id/btnCancelAnytimeBottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-8.0dip" android:maxWidth="10000.0dip" android:text="@string/recurring_payment_cancel_anytime" style="@style/Widget.Material3.Button.TextButton" />
                <com.google.android.material.button.MaterialButton android:textColor="?colorOnBackground" android:layout_gravity="center_horizontal" android:id="@id/btnSecureWIthGooglePlayBottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/secure_with_google_play" app:drawableEndCompat="@drawable/verified_user_18px" style="@style/Widget.Material3.Button.TextButton" />
                <com.google.android.material.button.MaterialButton android:layout_gravity="center_horizontal" android:id="@id/btn_restore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/restore_purchase" android:scaleX="0.8" android:scaleY="0.8" android:backgroundTint="@color/md_theme_dark_elevated_card" style="@style/Widget.Material3.Button.TonalButton" />
            </LinearLayout>
            <View android:background="@color/divider_dark_solid" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="32.0dip" android:layout_marginBottom="32.0dip" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/faq" android:fontFamily="@font/nexa_bold" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
                <FrameLayout android:orientation="vertical" android:id="@id/faqFragmentHolder" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_gravity="end|center|top" android:id="@id/fab_popup_close" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:src="@drawable/ic_close_24" android:contentDescription="@string/action_close" />
</FrameLayout>